tests/src/frontend/visibility/invalid/private_abstract_2.sk
base class C {
  children =
  | A()
  | B()
  private fun foo(): void
  | A _ -> void
  | B _ -> void
}
